--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,52 +1,69 @@
+version: '3.8'
+
 services:
   mariadb:
-    image:
     build:
-
+      context: requirements/mariadb
+      dockerfile: Dockerfile
+      args:
+        - DB_NAME=${DB_NAME}
+        - DB_USER=${DB_USER}
+        - DB_PASSWORD=${DB_PASSWORD}
+        - DB_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+    container_name: mariadb
+    volumes:
+      - mariadb_data:/var/lib/mysql
     networks:
-        - inception
+      - inception_network
     env_file:
       - .env
-
-    restart: always
+    restart: unless-stopped
 
   wordpress:
-    image:
     build:
-
+      context: requirements/wordpress
+      dockerfile: Dockerfile
+    container_name: wordpress
+    volumes:
+      - wordpress_data:/var/www/html
     networks:
-        - inception
+      - inception_network
     env_file:
       - .env
+    depends_on:
+      - mariadb
+    restart: unless-stopped
 
-    restart: always
-
-  nginix:
-    image:
+  nginx:
     build:
-
+      context: requirements/nginx
+      dockerfile: Dockerfile
+    container_name: nginx
+    ports:
+      - "443:443"
+    volumes:
+      - wordpress_data:/var/www/html
     networks:
-        - inception
-    env_file:
-      - .env
+      - inception_network
+    depends_on:
+      - wordpress
+    restart: unless-stopped
 
-    restart: always
-    
 networks:
-  inception:
+  inception_network:
     driver: bridge
 
 volumes:
-  wordpress:
+  wordpress_data:
     driver: local
     driver_opts:
-      device: ${VOLUME_PATH}/wordpress
       type: none
+      device: /home/${USER}/data/wordpress
+      o: bind
+  mariadb_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/${USER}/data/mariadb
       o: bind
 
-  mariadb:
-    driver: local
-    driver_opts:
-      device: ${VOLUME_PATH}/mariadb
-      type: none
-      o: bind
