--- a/srcs/.env
+++ b/srcs/.env
@@ -1,17 +1,17 @@
-# Domain settings
-DOMAIN_NAME=login.42.fr
+DONAIN_NAME=localhost
 
-# MariaDB settings
-DB_NAME=wordpress
-DB_USER=wpuser
-DB_PASSWORD=secure_password
-DB_ROOT_PASSWORD=very_secure_password
+MYSQL_HOSTNAME=mariadb
+MYSQL_DATABASE=mregragdb
+MYSQL_USER=mregrag
+MYSQL_PASSWORD=mregrag1234
+MYSQL_ROOT_USER=root
+MYSQL_ROOT_PASSWORD=mregrag1234
 
-# WordPress settings
-WP_TITLE=Inception
-WP_ADMIN_USER=supervisor
-WP_ADMIN_PASSWORD=secure_admin_pass
-WP_ADMIN_EMAIL=supervisor@42.fr
-WP_USER=author
-WP_USER_PASSWORD=author_password
-WP_USER_EMAIL=author@42.fr
+WORDPRESS_TITLE=mregragPage
+WORDPRESS_ADMIM=mregrag_wordpress
+WORDPRESS_ADMIM_PASS=mregrag1234
+WORDPRESS_ADMIM_EMAIL=mregrag.student@1337.com
+
+WORDPRESS_USER=mregrag
+WORDPRESS_EMAIL=regrag0101@gmail.com
+WORDPRESS_USER_PASS=mregrag1234
