--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,15 +1,21 @@
-# requirements/mariadb/Dockerfile
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y \
-    mariadb-server \
-    && rm -rf /var/lib/apt/lists/*
 
-COPY conf/my.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-COPY tools/init-db.sh /docker-entrypoint-initdb.d/
+RUN apt-get update && \
+	apt-get install -y \
+	mariadb-server
 
-RUN chmod +x /docker-entrypoint-initdb.d/init-db.sh
+COPY conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
+
+RUN mkdir -p /var/run/mysqld \
+	&& chown -R mysql:mysql /var/run/mysqld \
+	&& chmod 777 /var/run/mysqld
 
 EXPOSE 3306
 
-CMD ["mysqld"]
+COPY ./tools/mariadb.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/mariadb.sh
+
+RUN mysql_install_db
+
+ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
