--- a/srcs/.env
+++ b/srcs/.env
@@ -1,17 +1,22 @@
-DONAIN_NAME=localhost
+DOMAIN_NAME=mregrag.42.fr
 
-MYSQL_HOSTNAME=mariadb
-MYSQL_DATABASE=mregragdb
-MYSQL_USER=mregrag
-MYSQL_PASSWORD=mregrag1234
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=mregrag1234
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=wordpress
+MYSQL_USER=wpuser
+MYSQL_PASSWORD=wppassword
 
-WORDPRESS_TITLE=mregragPage
-WORDPRESS_ADMIM=mregrag_wordpress
-WORDPRESS_ADMIM_PASS=mregrag1234
-WORDPRESS_ADMIM_EMAIL=mregrag.student@1337.com
+WORDPRESS_DB_HOST=mariadb
+WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_USER=wpuser
+WORDPRESS_DB_PASSWORD=wppassword
+WORDPRESS_TABLE_PREFIX=wp_
 
-WORDPRESS_USER=mregrag
-WORDPRESS_EMAIL=regrag0101@gmail.com
-WORDPRESS_USER_PASS=mregrag1234
+WORDPRESS_ADMIN_USER=superuser
+WORDPRESS_ADMIN_PASSWORD=adminpassword
+WORDPRESS_ADMIN_EMAIL=admin@example.com
+
+WORDPRESS_USER=user
+WORDPRESS_USER_PASSWORD=userpassword
+WORDPRESS_USER_EMAIL=user@example.com
+
+NGINX_SERVER_NAME=mregrag.42.fr
