--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,60 +1,60 @@
-networks:
-     inception_network:
-        name:  inception_network
-        driver: bridge
-
 services:
-    nginx:
-        container_name: nginx
-        build: ./requirements/nginx
-        image: nginx
-        ports:
-         - 8443:443
-        volumes:
-         - wordpress_data:/var/www/html
-        restart: always
-        networks:
-         -  inception_network
+  nginx:
+    container_name: nginx
+    build:
+      context: ./requirements/nginx
+    ports:
+      - "443:443"
+    volumes:
+      - wordpress_data:/var/www/html
+    networks:
+      - inception
+    restart: always
+    depends_on:
+      - wordpress
+    env_file:
+      - .env
 
+  wordpress:
+    container_name: wordpress
+    build:
+      context: ./requirements/wordpress
+    volumes:
+      - wordpress_data:/var/www/html
+    networks:
+      - inception
+    restart: always
+    depends_on:
+      - mariadb
+    env_file:
+      - .env
 
-    mariadb:
-         container_name: mariadb
-         build:
-            context: ./requirements/mariadb
-         image: mariadb
-         volumes:
-          - mariadb_data:/var/lib/mysql
-         restart: always
-         networks:
-          -  inception_network
-         env_file:
-          - .env
+  mariadb:
+    container_name: mariadb
+    build:
+      context: ./requirements/mariadb
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    networks:
+      - inception
+    restart: always
+    env_file:
+      - .env
 
-    wordpress:
-        container_name: wordpress
-        build: ./requirements/wordpress
-        image: wordpress
-        depends_on:
-         - mariadb
-        volumes:
-         - wordpress_data:/var/www/html
-        restart: always
-        networks:
-         -  inception_network
-        env_file:
-          - .env
+networks:
+  inception:
+    driver: bridge
 
 volumes:
-    mariadb_data:
-        driver: local
-        driver_opts:
-            type: none
-            device: /home/mregrag/data/mariadb
-            o: bind
-
-    wordpress_data:
-        driver: local
-        driver_opts:
-            type: none
-            device: /home/mregrag/data/wordpress
-            o: bind
+  wordpress_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/${USER}/data/wordpress
+      o: bind
+  mariadb_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/${USER}/data/mariadb
+      o: bind
