--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,21 +1,16 @@
-FROM debian:bullseye
+FROM alpine:3.16
 
+RUN apk update && apk add --no-cache mariadb mariadb-client
 
-RUN apt-get update && \
-	apt-get install -y \
-	mariadb-server
+# Create directories
+RUN mkdir -p /run/mysqld && chown -R mysql:mysql /run/mysqld
 
-COPY conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
+# Copy configuration files
+COPY ./conf/my.cnf /etc/my.cnf.d/mariadb-server.cnf
 
-RUN mkdir -p /var/run/mysqld \
-	&& chown -R mysql:mysql /var/run/mysqld \
-	&& chmod 777 /var/run/mysqld
+COPY ./tools/setup.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 EXPOSE 3306
 
-COPY ./tools/mariadb.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/mariadb.sh
-
-RUN mysql_install_db
-
-ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
+ENTRYPOINT ["/docker-entrypoint.sh"]
