--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,10 +1,26 @@
 FROM alpine:3.16
 
-RUN apk add --no-cache \
-        php8-fpm \
-        php8-mysqli \
-        mariadb-client
+# Install required packages
+RUN apk update && apk add --no-cache \
+    php8 \
+    php8-fpm \
+    php8-mysqli \
+    php8-json \
+    php8-curl \
+    php8-dom \
+    php8-exif \
+    php8-fileinfo \
+    php8-mbstring \
+    php8-openssl \
+    php8-xml \
+    php8-zip \
+    php8-phar \
+    mariadb-client \
+    curl \
+    wget \
+    netcat-openbsd
 
+# Configure php-fpm
 RUN mkdir -p /run/php && \
     sed -i 's/listen = 127.0.0.1:9000/listen = 9000/g' /etc/php8/php-fpm.d/www.conf
 
@@ -16,9 +32,12 @@ RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.ph
 # Set working directory
 WORKDIR /var/www/html
 
+# Copy setup script
 COPY ./tools/setup.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/setup.sh
 
+# Expose port
 EXPOSE 9000
 
+# Start PHP-FPM and run the setup script
 CMD ["/usr/local/bin/setup.sh"]
