--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,9 +7,9 @@ RUN mkdir -p /etc/nginx/ssl /var/run/nginx
 
 # Generate self-signed SSL certificate
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-    -keyout /etc/nginx/ssl/nginx.key \
-    -out /etc/nginx/ssl/nginx.crt \
-    -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42Paris/CN=mregrag.42.fr"
+	-keyout /etc/nginx/ssl/nginx.key \
+	-out /etc/nginx/ssl/nginx.crt \
+	-subj "/C=MA/ST=Tanger-Tetouan-Al_Hoceima/L=Larache/O=42/OU=42Larache/CN=mregrag.42.ma"
 
 COPY ./conf/nginx.conf /etc/nginx/http.d/default.conf
 
