--- a/srcs/.env
+++ b/srcs/.env
@@ -19,4 +19,11 @@ WORDPRESS_USER=user
 WORDPRESS_USER_PASSWORD=userpassword
 WORDPRESS_USER_EMAIL=user@example.com
 
+FTP_USER=ftpuser
+FTP_PASSWORD=ftppassword
+
+REDIS_PASSWORD=redispassword
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 NGINX_SERVER_NAME=mregrag.42.fr
