--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -41,6 +41,43 @@ services:
     env_file:
       - .env
 
+  ftp:
+    container_name: ftp
+    build:
+      context: ./requirements/bonus/ftp
+    volumes:
+      - wordpress_data:/var/www/html
+    networks:
+      - inception
+    restart: always
+    ports:
+      - "21:21"
+      - "21000-21010:21000-21010"
+    env_file:
+      - .env
+
+  redis:
+    build:
+      context: ./requirements/bonus/redis
+    container_name: redis
+    networks:
+      - inception
+    volumes:
+      - wordpress_data:/var/www/html
+    restart: always
+    env_file:
+      - .env
+
+  static_website:
+    container_name: static_website
+    build:
+      context: ./requirements/bonus/static_website
+    networks:
+      - inception
+    restart: always
+    ports:
+      - "8080:80"
+
 networks:
   inception:
     driver: bridge
