--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -76,7 +76,20 @@ services:
       - inception
     restart: always
     ports:
-      - "8080:80"
+      - "2105:80"
+
+  adminer:
+    container_name: adminer
+    build:
+      context: ./requirements/bonus/adminer
+    restart: always
+    networks:
+      - inception
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mariadb
+
 
 networks:
   inception:
