--- a/srcs/.env
+++ b/srcs/.env
@@ -1,29 +1,15 @@
 DOMAIN_NAME=mregrag.42.fr
 
-MYSQL_ROOT_PASSWORD=rootpassword
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wpuser
 MYSQL_PASSWORD=wppassword
+MYSQL_ROOT_PASSWORD=rootpassword
 
-WORDPRESS_DB_HOST=mariadb
-WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_USER=wpuser
-WORDPRESS_DB_PASSWORD=wppassword
-WORDPRESS_TABLE_PREFIX=wp_
+WP_TITLE=Inception
+WP_ADMIN_USER=admin
+WP_ADMIN_PASSWORD=adminpassword
+WP_ADMIN_EMAIL=mregrag@student.1337.ma
 
-WORDPRESS_ADMIN_USER=superuser
-WORDPRESS_ADMIN_PASSWORD=adminpassword
-WORDPRESS_ADMIN_EMAIL=admin@example.com
-
-WORDPRESS_USER=user
-WORDPRESS_USER_PASSWORD=userpassword
-WORDPRESS_USER_EMAIL=user@example.com
-
-FTP_USER=ftpuser
-FTP_PASSWORD=ftppassword
-
-REDIS_PASSWORD=redispassword
-REDIS_HOST=redis
-REDIS_PORT=6379
-
-NGINX_SERVER_NAME=mregrag.42.fr
+WP_USER=mregrag
+WP_PASSWORD=userpassword
+WP_EMAIL=mregrag0101@gmail.com
