--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - wordpress_data:/var/www/html
     networks:
       - inception
-    restart: always
     depends_on:
       - wordpress
     env_file:
       - .env
+    restart: always
 
   wordpress:
     container_name: wordpress
@@ -23,11 +23,12 @@ services:
       - wordpress_data:/var/www/html
     networks:
       - inception
-    restart: always
     depends_on:
       - mariadb
+      - redis
     env_file:
       - .env
+    restart: always
 
   mariadb:
     container_name: mariadb
@@ -37,58 +38,20 @@ services:
       - mariadb_data:/var/lib/mysql
     networks:
       - inception
-    restart: always
     env_file:
       - .env
-
-  ftp:
-    container_name: ftp
-    build:
-      context: ./requirements/bonus/ftp
-    volumes:
-      - wordpress_data:/var/www/html
-    networks:
-      - inception
     restart: always
-    ports:
-      - "21:21"
-      - "21000-21010:21000-21010"
-    env_file:
-      - .env
 
+  
   redis:
+    container_name: redis
     build:
       context: ./requirements/bonus/redis
-    container_name: redis
     networks:
       - inception
-    volumes:
-      - wordpress_data:/var/www/html
     restart: always
-    env_file:
-      - .env
 
-  static_website:
-    container_name: static_website
-    build:
-      context: ./requirements/bonus/static_website
-    networks:
-      - inception
-    restart: always
-    ports:
-      - "2105:80"
 
-  adminer:
-    container_name: adminer
-    build:
-      context: ./requirements/bonus/adminer
-    restart: always
-    networks:
-      - inception
-    ports:
-      - "8080:8080"
-    depends_on:
-      - mariadb
 
 
 networks:
@@ -108,3 +71,4 @@ volumes:
       type: none
       device: /home/${USER}/data/mariadb
       o: bind
+
