--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,43 +1,20 @@
-FROM alpine:3.16
+FROM debian:bullseye
 
-# Install required packages
-RUN apk update && apk add --no-cache \
-    php8 \
-    php8-fpm \
-    php8-mysqli \
-    php8-json \
-    php8-curl \
-    php8-dom \
-    php8-exif \
-    php8-fileinfo \
-    php8-mbstring \
-    php8-openssl \
-    php8-xml \
-    php8-zip \
-    php8-phar \
-    mariadb-client \
-    curl \
-    wget \
-    netcat-openbsd
+RUN apt-get update && \
+    apt-get install -y curl php php-fpm php-mysql mariadb-client && \
+    mkdir -p /run/php && \
+    sed -i 's|listen = .*|listen = 9000|' /etc/php/*/fpm/pool.d/www.conf
 
-# Configure php-fpm
-RUN mkdir -p /run/php && \
-    sed -i 's/listen = 127.0.0.1:9000/listen = 9000/g' /etc/php8/php-fpm.d/www.conf
+WORKDIR /var/www/html
 
-# Install WP-CLI
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
     chmod +x wp-cli.phar && \
     mv wp-cli.phar /usr/local/bin/wp
 
-# Set working directory
-WORKDIR /var/www/html
-
-# Copy setup script
-COPY ./tools/setup.sh /usr/local/bin/
+COPY ./tools/setup.sh /usr/local/bin/setup.sh
 RUN chmod +x /usr/local/bin/setup.sh
 
-# Expose port
 EXPOSE 9000
 
-# Start PHP-FPM and run the setup script
-CMD ["/usr/local/bin/setup.sh"]
+ENTRYPOINT ["/usr/local/bin/setup.sh"]
+
