--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,6 @@
 DOMAIN_NAME=mregrag.42.fr
 
+MYSQL_SERVER=mariadb
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wpuser
 MYSQL_PASSWORD=wppassword
@@ -13,3 +14,6 @@ WP_ADMIN_EMAIL=mregrag@student.1337.ma
 WP_USER=mregrag
 WP_PASSWORD=userpassword
 WP_EMAIL=mregrag0101@gmail.com
+
+FTP_USER=ftpuser
+FTP_PASSWORD=ftppassword
