--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:bullseye
 
-RUN apt-get update && \
+RUN apt-get update  -y && \
     apt-get install -y curl php php-fpm php-mysql mariadb-client && \
     mkdir -p /run/php && \
     sed -i 's|listen = .*|listen = 9000|' /etc/php/*/fpm/pool.d/www.conf
