--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,18 +1,14 @@
 FROM debian:bullseye
 
-RUN apt-get update -y && \
-    apt-get install -y nginx openssl
+RUN apt-get update -y && apt-get install -y nginx openssl
 
 RUN mkdir -p /etc/nginx/ssl
 
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-    -keyout /etc/nginx/ssl/nginx.key \
-    -out /etc/nginx/ssl/nginx.crt \
-    -subj "/C=MA/ST=Larache/L=Larache/O=42/OU=42/CN=mregrag.42.fr"
-
 COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 443
 
+COPY ./tools/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
-
