--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name mregrag.42.fr;
+    server_name ${DOMAIN_NAME};
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_certificate /etc/nginx/ssl/nginx.crt;
