--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
 DOMAIN_NAME=mregrag.42.fr
 
-MYSQL_SERVER=mariadb
-MYSQL_DATABASE=wordpress
-MYSQL_USER=wpuser
+DB_SERVER=mariadb
+DB_NAME=wordpress
+DB_USER=wpuser
 
 WP_TITLE=Inception
 WP_ADMIN_USER=admin
