--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -3,11 +3,10 @@ FROM debian:bullseye
 RUN apt-get update && apt-get install -y vsftpd
 
 COPY ./conf/vsftpd.conf /etc/vsftpd.conf
-COPY ./tools/setup.sh /setup.sh
+COPY ./tools/setup.sh /usr/local/bin/setup.sh
 
-RUN chmod +x /setup.sh
+RUN chmod +x /usr/local/bin/setup.sh
 
 EXPOSE 21 21000-21010
 
-CMD ["/setup.sh"]
-
+ENTRYPOINT ["/usr/local/bin/setup.sh"]
