--- a/srcs/.env
+++ b/srcs/.env
@@ -1,11 +1,11 @@
-DOMAIN_NAME=mregrag.42.fr
+DOMAIN_NAME=51.143.189.113
 
 DB_SERVER=mariadb
 DB_NAME=wordpress
 DB_USER=wpuser
 
 WP_TITLE=Inception
-WP_ADMIN_USER=admin
+WP_ADMIN_USER=root
 WP_ADMIN_EMAIL=mregrag@student.1337.ma
 
 WP_USER=mregrag
