--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,13 @@
-DOMAIN_NAME=51.143.189.113
+TITLE="Inception 1337"
+DOMAIN_NAME=148.100.79.175
 
-DB_SERVER=mariadb
-DB_NAME=wordpress
-DB_USER=wpuser
+MYSQL_DATABASE=wordpress_db
+MYSQL_USER=mregrag
 
-WP_TITLE=Inception
-WP_ADMIN_USER=root
-WP_ADMIN_EMAIL=mregrag@student.1337.ma
+WP_DB_HOST=mariadb
+WP_ADMIN_USER=mregrag
+WP_ADMIN_EMAIL=mregrag@42.fr
+WP_USER=user2
+WP_USER_EMAIL=user2@42.fr
 
-WP_USER=mregrag
-WP_EMAIL=mregrag0101@gmail.com
-
-FTP_USER=ftpuser
+FTP_USER=ftp_user
