--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,11 +1,15 @@
-FROM debian:bullseye
+FROM debian:bookworm
 
 RUN apt-get update && apt-get install -y vsftpd
 
 COPY ./conf/vsftpd.conf /etc/vsftpd.conf
-COPY ./tools/setup.sh /usr/local/bin/setup.sh
 
-RUN chmod +x /usr/local/bin/setup.sh
+COPY ./tools/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 
-ENTRYPOINT ["/usr/local/bin/setup.sh"]
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
+RUN mkdir -p /var/run/vsftpd/empty
+RUN echo "/usr/sbin/nologin" >> /etc/shells
+
+ENTRYPOINT ["docker-entrypoint.sh"]
+CMD ["vsftpd", "/etc/vsftpd.conf"]
