--- a/srcs/requirements/nginx/conf/wordpress.conf
+++ b/srcs/requirements/nginx/conf/wordpress.conf
@@ -1,20 +1,24 @@
 server {
     listen 443 ssl;
-    server_name ${DOMAIN_NAME};
+    listen [::]:443 ssl;
 
-    ssl_certificate /etc/nginx/ssl/nginx.crt;
-    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    server_name DOMAIN_NAME;
+
+    ssl_certificate /run/secrets/nginx_cert;
+    ssl_certificate_key /run/secrets/nginx_key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
 
     root /var/www/html;
     index index.php;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass wordpress:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
