--- a/srcs/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp/conf/vsftpd.conf
@@ -1,19 +1,32 @@
+# --- Core Setup ---
+# Run in standalone mode (required for a daemon)
 listen=YES
+# Only listen on IPv4, not IPv6
 listen_ipv6=NO
+
+# --- User Security ---
+# Disallow anonymous logins
 anonymous_enable=NO
+# Allow local users (like your $FTP_USER) to log in
 local_enable=YES
+# Allow users to upload files and make changes
 write_enable=YES
-local_umask=022
-dirmessage_enable=YES
-use_localtime=YES
-xferlog_enable=YES
-connect_from_port_20=YES
+
+# --- Jailing (Security) ---
+# Lock the user in their home directory (which is /var/www/html)
 chroot_local_user=YES
+# This is a *required fix* to allow jailing in a writeable directory
 allow_writeable_chroot=YES
-secure_chroot_dir=/var/run/vsftpd/empty
-pam_service_name=vsftpd
+
+# --- Docker Network Fix (Passive Mode) ---
+# Enable passive mode (required for NAT/Docker)
 pasv_enable=YES
+# Define the port range for data transfer
 pasv_min_port=21000
 pasv_max_port=21010
-user_sub_token=$USER
-local_root=/var/www/html
+# A placeholder for your domain name, which your script will fill in
+pasv_address=YOUR_IP_ADDRESS_HERE
+
+# --- Docker Stability Fix ---
+# Prevents vsftpd from crashing inside Docker's seccomp sandbox
+seccomp_sandbox=NO
