--- a/srcs/requirements/bonus/redis/Dockerfile
+++ b/srcs/requirements/bonus/redis/Dockerfile
@@ -1,5 +1,10 @@
-FROM debian:bullseye
+FROM debian:bookworm
 
-RUN apt-get update && apt-get install -y redis-server
+RUN apt-get update  && apt-get install -y redis-server
 
-CMD ["redis-server", "--protected-mode", "no"]
+RUN \
+    sed -i 's/^bind 127.0.0.1 .*/bind 0.0.0.0/' /etc/redis/redis.conf \
+    && sed -i 's/^daemonize yes/daemonize no/' /etc/redis/redis.conf \
+    && echo "aclfile /run/secrets/redis_acl" >> /etc/redis/redis.conf
+
+CMD ["redis-server", "/etc/redis/redis.conf"]
