--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:bookworm
+FROM debian:bookworm-slim 
 
 RUN apt-get update && apt-get install -y mariadb-server
 
@@ -7,3 +7,4 @@ COPY ./tools/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
 ENTRYPOINT ["docker-entrypoint.sh"]
+CMD ["mysqld_safe", "--user=mysql", "--bind-address=0.0.0.0"]
