--- a/srcs/requirements/bonus/portainer/Dockerfile
+++ b/srcs/requirements/bonus/portainer/Dockerfile
@@ -4,10 +4,11 @@ RUN apt-get update && apt-get install -y wget tar ca-certificates
 
 RUN wget https://github.com/portainer/portainer/releases/download/2.33.3/portainer-2.33.3-linux-amd64.tar.gz \
     && tar -xzf portainer-2.33.3-linux-amd64.tar.gz -C /usr/local/ \
+    && ln -s /usr/local/portainer/portainer /usr/local/bin/portainer-server \
     && rm portainer-2.33.3-linux-amd64.tar.gz
 
-EXPOSE 8000 9443
+COPY ./tools/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 
-VOLUME ["/data"]
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
-CMD ["/usr/local/portainer/portainer", "--data=/data"]
+ENTRYPOINT ["docker-entrypoint.sh"]
